# yaz4j

./: .classpath  .gitignore  .project  .travis.yml  AUTHORS  IDMETA  LICENSE  NEWS  README  README.md  build-windows.xml  build.xml  mkdist.sh  pom.xml  yaz-config-wrap.sh  yaz4j.spec
.github/workflows/: mvn-verify.yaml
any/: pom.xml
debian/: changelog  control  maven.ignoreRules  maven.rules  rules  yaz4j.pom  yaz4j.poms
debian/patches/: 01_junit.patch  series
dependencies/yaz-2.1.28/: ChangeLog  Makefile.am  Makefile.in  README  buildconf.sh  configure  configure.ac  windows.txt  yaz.spec
dependencies/yaz-2.1.28/client/: Makefile.in  admin.c  client.c
dependencies/yaz-2.1.28/doc/: Makefile.am  Makefile.in  asn.external.html  asn.html  asn.oid.html  asn.pdu.html  asn.preparing.html  asn.xml  client.commands.html  client.html  client.invoking.html  client.searching.html  comstack.addresses.html  comstack.client.html  comstack.common.html  comstack.diagnostics.html  comstack.html  comstack.introduction.html  comstack.server.html  comstack.ssl.html  comstack.summary.html  comstack.xml  credits.html  entities.ent  frontend.xml  (+62 more)
dependencies/yaz-2.1.28/doc/common/: Makefile.am  Makefile.in  common.ent  ref2dbinc.xsl
doc/: README.md
examples/zgate/: pom.xml
libyaz4j/: Makefile  build-osx.sh  build-windows.bat  build.sh  libyaz4j.i  libyaz4j.i.orig  typemaps.txt
libyaz4j/include/: zoom-extra.h
libyaz4j/src/: .gitignore  libyaz4j.cpp  zoom-extra.cpp
linux/: pom.xml
src/site/: site.xml
test/: ConnectionTest.java
unix/: pom.xml
win32/: pom.xml
(+444 files in other folders)
